--- a/app/views/layouts/_admin_lte_2_header.html.erb
+++ b/app/views/layouts/_admin_lte_2_header.html.erb
@@ -4,9 +4,9 @@
   <!-- Logo -->
   <a href="/" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
-    <span class="logo-mini"><b>A</b>LT</span>
+    <span class="logo-mini"><b><i class="fa fa-microphone"></i></b></span>
     <!-- logo for regular state and mobile devices -->
-    <span class="logo-lg"><b>Admin</b>LTE</span>
+    <span class="logo-lg"><b>Shrota</b>&nbsp;&nbsp;<i class="fa fa-microphone"></i></span>
   </a>
 
   <!-- Header Navbar -->
