--- a/app/views/layouts/admin_lte_2.html.erb
+++ b/app/views/layouts/admin_lte_2.html.erb
@@ -16,7 +16,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body class="skin-blue sidebar-mini fixed <%= params[:controller].parameterize %> <%= action_name %>">
+<body class="skin-blue sidebar-mini .sidebar-collapse <%= params[:controller].parameterize %> <%= action_name %>">
   <div class="wrapper">
 
     <%= render partial: 'layouts/admin_lte_2_header' %>
