--- a/app/views/layouts/admin_lte_2_login.html.erb
+++ b/app/views/layouts/admin_lte_2_login.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>AdminLTE 2 | Log in</title>
+  <title>Shrota | Log in</title>
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
