--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -54,7 +54,7 @@
     </div><!-- /.social-auth-links -->
 
     <a href="#">I forgot my password</a><br>
-    <a href="register.html" class="text-center">Register a new membership</a>
+    <%= link_to('Register a new membership', new_user_registration_path, class: 'text-center')  %>
 
   </div><!-- /.login-box-body -->
 </div><!-- /.login-box -->
