--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -20,43 +20,7 @@
   <div class="login-logo">
     <a href="/">Shrota&nbsp;&nbsp;<b><i class="fa fa-microphone"></i></b></a>
   </div><!-- /.login-logo -->
-  <div class="login-box-body">
-    <p class="login-box-msg">Sign in to start your session</p>
-    <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-      <div class="form-group has-feedback">
-        <%= f.text_field :email, class: 'form-control', autofocus: true %>
-        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-      </div>
-
-      <div class="form-group has-feedback">
-        <%= f.password_field :password, class: 'form-control', autocomplete: 'off' %>
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-      </div>
-      <div class="row">
-        <div class="col-xs-8">
-          <div class="checkbox icheck">
-            <label>
-              <input type="checkbox"> Remember Me
-            </label>
-          </div>
-        </div><!-- /.col -->
-        <div class="col-xs-4">
-          <%= f.submit 'Sign in', class: 'btn btn-primary btn-block btn-flat' %>
-
-        </div><!-- /.col -->
-      </div>
-
-    <% end %>
-    <div class="social-auth-links text-center">
-      <p>- OR -</p>
-      <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
-      <a href="#" class="btn btn-block btn-social btn-google-plus btn-flat"><i class="fa fa-google-plus"></i> Sign in using Google+</a>
-    </div><!-- /.social-auth-links -->
-
-    <a href="#">I forgot my password</a><br>
-    <%= link_to('Register a new membership', new_user_registration_path, class: 'text-center')  %>
-
-  </div><!-- /.login-box-body -->
+  <%= yield %>
 </div><!-- /.login-box -->
 
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
