--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,7 @@
 <div class="login-box-body">
   <p class="login-box-msg">Forgot your password?</p>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
       <div class="form-group has-feedback">
         <%= f.text_field :email, class: 'form-control', placeholder: 'Email', autofocus: true %>
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
