--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="login-box-body">
   <p class="login-box-msg">Register a new membership</p>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
       <div class="form-group has-feedback">
         <%= f.text_field :full_name, class: 'form-control', placeholder: 'Full Name', autofocus: true %>
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
