--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,12 +8,12 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require iCheck/square/blue
+ *= require iCheck/square/grey
  *= require_self
  *= require_tree .
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "AdminLTE/AdminLTE";
-@import "AdminLTE/skins/skin-blue";
+@import "AdminLTE/skins/skin-black-light";
 
