--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body class="skin-blue sidebar-mini .sidebar-collapse <%= params[:controller].parameterize %> <%= action_name %>">
+<body class="skin-black-light sidebar-mini .sidebar-collapse <%= params[:controller].parameterize %> <%= action_name %>">
 <div class="wrapper">
 
   <%= render partial: 'layouts/header' %>
