--- a/app/views/devise/shared/_social_links.html.haml
+++ b/app/views/devise/shared/_social_links.html.haml
@@ -6,4 +6,7 @@
   = link_to user_omniauth_authorize_path(:google_oauth2), class: 'btn btn-block btn-social btn-google-plus btn-flat' do
     %i.fa.fa-google-plus
     Sign in using Google+
+  = link_to user_omniauth_authorize_path(:twitter), class: 'btn btn-block btn-social btn-twitter btn-flat' do
+    %i.fa.fa-twitter
+    Sign in using Twitter
     / /.social-auth-links
