--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -5,7 +5,9 @@
   = link_to 'Register', new_registration_path(resource_name), class: 'text-center'
   %br
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  = link_to 'Forgot your password?', new_password_path(resource_name)
+  = link_to new_password_path(resource_name) do
+    I forgot my password
+    %i.fa.fa-frown-o
   %br
 - if devise_mapping.confirmable? && controller_name != 'confirmations'
   = link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name)
