--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,7 +8,7 @@
         %i.fa.fa-microphone
     / logo for regular state and mobile devices
     %span.logo-lg
-      Shrota&nbsp;&nbsp;
+      MyApp&nbsp;&nbsp;
       %b
         %i.fa.fa-microphone
   / Header Navbar
