--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:charset => 'UTF-8'}
-      %title Shrota | Log in
+      %title MyApp | Log in
       %meta{:content => 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', :name => 'viewport'}
         %link{:href => 'https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css', :rel => 'stylesheet', :type => 'text/css'}
         = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
@@ -16,7 +16,7 @@
     .login-box
       .login-logo
         %a{:href => '/'}
-          Shrota&nbsp;&nbsp;
+          MyApp&nbsp;&nbsp;
           %b
             %i.fa.fa-microphone
       / /.login-logo
