--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:charset => "UTF-8"}
-      %title Shrota | Dashboard
+      %title MyApp | Dashboard
       %meta{:content => 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', :name => 'viewport'}
         %link{:href => 'https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css', :rel => 'stylesheet', :type => 'text/css'}
         %link{:href => 'https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css', :rel => "stylesheet", :type => 'text/css'}
@@ -54,7 +54,7 @@
         %strong
           Copyright &copy; 2015
           = succeed '.' do
-            %a{:href => '/'} Shrota
+            %a{:href => '/'} MyApp
         All rights reserved.
       %aside.control-sidebar.control-sidebar-dark
         / Create the tabs
